# progs

./: .gitignore  .gitignore_BACKUP_29456  .gitmodules
AOJ/Ball_0033/: CMakeLists.txt  main  main.cpp
AOJ/CircleandPoints/: CircleandPoints.cpp
AOJ/CliffClimbing/: cliffClimbing.cpp
AOJ/DragonFantasy/: DragonFantasy.cpp  DragonFantasy_ver2.cpp
AOJ/HowCanISatisfy__/: HowCanISatisfy__.cpp  _HowCanISatisfy__.cpp
AOJ/ImmortalJewels/: immortalJewels.cpp
AOJ/Osenbei_0525/: CMakeLists.txt  main  main.cpp
AOJ/Property_Distribution/: CMakeLists.txt  main  main.cpp  test2.txt
AOJ/Red_and_Black/: Red_and_Black.sln
AOJ/Vampire/: Vampire.cpp
AOJ/areaSeparation/: areaSeparation.cpp
AOJ/cheese_0558/: main  main.cpp
Arihon/: Arihon.sln
Arihon/Debug/: DP01_1.ilk  DP01_2.ilk  DP03.ilk  LCS.ilk
MachineLearningMeetsPython/: Untitled.ipynb  memo.md
MyServer/html/: index.html
POJ/Red_and_Black_1979/: main.cpp
POJ/cheapest_palindrome_3280/: main.cpp
POJ/cleaning_shifts_2376/: CMakeLists.txt  main  main.cpp  test.txt
POJ/coins_1742/: coins_1742.sln
POJ/protecting_the_flowers_3262/: main  main.cpp
Sprint/: problem2.py
TopCoder/: topcoder.jnlp
TopCoder/TopCoder/: TopCoder.sln
TopCoder/source/: FoxAndVacation.cpp  IdentifyingWood.cpp  Quacking.cpp  c.cpp
UnityProjects/3DPinBall/: 3DPinBall.CSharp.csproj  3DPinBall.sln
UnityProjects/Bowling/: Assembly-CSharp-vs.csproj  Bowling-csharp.sln  Bowling.CSharp.csproj  Bowling.sln  Bowling.userprefs
haruken/: CMakeLists.txt
haruken/src/: Answer.cpp
indicator/: index.html  indicator.sln
(+425 files in other folders)
